<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/idRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="TextView" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="4"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:weightSum="5">

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thoiGian"
                    android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
                <TextView
                    android:id="@+id/heartBeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/heartBeat"
                    android:textSize="20dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                android:id="@+id/judgment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judgment"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="5"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:weightSum="5">

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
                <TextView
                    android:id="@+id/timeContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
                <TextView
                    android:id="@+id/heartBeatContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
                <TextView
                    android:id="@+id/judgmentContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="20dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>